# boilerplate-axum-server

./: Cargo.toml  Makefile  README.md  env.example
src/: main.rs
src/app/: routes.rs
